# auto-screencap

./: .gitignore  README.md  config.json  crypto_utils.py  dependencies.py  image_processing.py  logging_config.py  main.py  metadata_utils.py  note_prompt.py  requirements.txt  retention.py  rust_integration.py  scheduler.py  tray_icon.py
rust-worker/: Cargo.toml  README.md
rust-worker/src/: main.rs
tests/: test_main.py  test_metadata.py  test_rust_worker.py
